--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "node index.js"
